# qwen-esp-claw

./: .gitignore  ESP_CLAW_OPENCLAW_COMPARISON.md  README.md
neon-claw/components/neon_capabilities/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_context/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_context/include/: cap_context.h
neon-claw/components/neon_capabilities/cap_context/src/: cap_context.c
neon-claw/components/neon_capabilities/cap_cron/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_cron/include/: cap_cron.h
neon-claw/components/neon_capabilities/cap_cron/src/: cap_cron.c
neon-claw/components/neon_capabilities/cap_eventbus/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_eventbus/include/: cap_eventbus.h
neon-claw/components/neon_capabilities/cap_eventbus/src/: cap_eventbus.c
neon-claw/components/neon_capabilities/cap_heartbeat/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_hooks/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_pairing/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_prompt/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_ratelimit/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_react/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_secrets/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_vector/: CMakeLists.txt
neon-claw/components/neon_capabilities/cap_watchdog/: CMakeLists.txt
neon-claw/main/: CMakeLists.txt  config_http_server.h  neon_claw_core.c  neon_claw_init.c
(+202 files in other folders)
