idf_component_register(
    SRCS 
        "main.c"
        "app_claw.c"
        "basic_demo_cli.c"
        "basic_demo_wifi.c"
        "basic_demo_settings.c"
        "basic_demo_lua_modules.c"
        "app_expression_emote.c"
        "config_http_server.c"
        "captive_dns.c"
        "neon_claw_core.c"
        "neon_claw_init.c"
    INCLUDE_DIRS "."
    REQUIRES 
        freertos 
        esp_timer 
        nvs_flash 
        esp_netif 
        esp_wifi 
        http_parser 
        json 
        lwip 
        mDNS 
        console 
        fatfs 
        spi_flash
        neon_capabilities
)
